# tiycode

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_zh.md  components.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src-tauri/: .gitignore  .tarpaulin.toml  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260316000001_initial_schema.sql  20260319000002_provider_settings_v2.sql  20260319000003_provider_model_sort_order.sql  20260319000004_run_helpers.sql  20260320000100_thread_run_usage.sql  20260321000004_agent_profile_commit_message_settings.sql  20260321000100_run_helper_usage.sql  20260324000001_task_tracking.sql  20260406114000_settings_policy_seed_defaults.sql  20260408120000_agent_profile_thinking_level.sql  20260408150000_enforce_provider_key_uniqueness.sql  20260418000000_workspace_worktree_support.sql  20260420000000_thread_profile_id.sql  20260424000000_tool_call_storage_id.sql  20260424010000_tool_call_helper_id.sql  20260506000000_message_parts_json.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  attachment.rs  extensions.rs  git.rs  index.rs  mod.rs  prompts.rs  settings.rs  system.rs  terminal.rs  thread.rs  workspace.rs
src-tauri/src/core/: agent_run_compaction.rs  agent_run_event_handler.rs  agent_run_manager.rs  agent_run_manager_tests.rs  agent_run_summary.rs  agent_run_title.rs  agent_runtime_limits.rs  agent_session.rs  agent_session_compression.rs  agent_session_events.rs  agent_session_execution.rs  agent_session_history.rs  agent_session_tests.rs  agent_session_tools.rs  agent_session_types.rs  app_state.rs  built_in_agent_runtime.rs  catalog_model_id_normalizer.rs  context_compression.rs  desktop_runtime.rs  git_manager.rs  helper_agent_orchestrator.rs  index_manager.rs  local_search.rs  mod.rs  plan_checkpoint.rs  policy_engine.rs  prompt_command_manager.rs  ripgrep.rs  settings_manager.rs  shell_runtime.rs  sidecar_manager.rs  sleep_manager.rs  startup_manager.rs  task_board_manager.rs  terminal_manager.rs  thread_manager.rs  tool_gateway.rs  windows_process.rs  workspace_manager.rs  (+2 more)
src-tauri/src/core/executors/: edit.rs  filesystem.rs  git.rs  mod.rs  output_sanitizer.rs  process.rs  search.rs  terminal.rs  truncation.rs
src-tauri/src/core/prompt/: assembler.rs  context.rs  mod.rs  providers.rs  section.rs
src-tauri/src/core/subagent/: mod.rs  orchestrator.rs  review_contract.rs  (+1 more)
src-tauri/src/extensions/: config_io.rs  marketplace.rs  mcp.rs  mod.rs  plugins.rs  runtime_tools.rs  skills.rs
src-tauri/src/ipc/: app_events.rs  frontend_channels.rs  mod.rs  sidecar_protocol.rs
src-tauri/src/model/: errors.rs  extensions.rs  git.rs  mod.rs  provider.rs  settings.rs  task_board.rs  task_item.rs  terminal.rs  thread.rs  workspace.rs
src-tauri/src/persistence/: mod.rs
src-tauri/tests/: agent_run.rs  context_compression.rs  database_infrastructure.rs  e2e_full_chain.rs  extensions.rs  file_index.rs  frontend_integration.rs  frontend_serialization.rs  git.rs  index.rs  infrastructure.rs  m1_1_infrastructure.rs  m1_2_workspace.rs  m1_3_settings.rs  m1_4_thread.rs  m1_5_agent_run.rs  m1_6_tool_gateway.rs  m1_7_frontend_integration.rs  m1_8_index.rs  m1_e2e_full_chain.rs  m2_1_terminal_manager.rs  m2_2_git_tree.rs  m2_3_task_tracking.rs  m2_4_worktree.rs  persistence_repos.rs  plan_checkpoint.rs  policy_engine.rs  profile.rs  prompt_command_manager.rs  run_persistence.rs  settings.rs  task_board.rs  task_tracking.rs  terminal.rs  test_helpers.rs  thread.rs  tool_gateway.rs  workspace.rs  worktree.rs
(+293 files in other folders)
