[package]
name = "tiy-agent"
version = "0.1.0"
description = "Tiy Agent desktop application built with Tauri 2 + React"
authors = ["Tiy AI"]
edition = "2021"

[lib]
name = "tiy_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.4.1"
