[package]
name = "tiycode"
version = "0.1.0"
description = "TiyCode is an AI-first desktop coding agent"
authors = ["Tiy AI"]
edition = "2021"

[lib]
name = "tiycode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Serialization
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
dirs = "6"
dunce = "1"
thiserror = "2"
anyhow = "1"
globset = "0.4"
ignore = "0.4"
regex = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keepawake = "0.6"
portable-pty = "0.9"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
similar = "2"
tiycore = "0.2.4-rc.2"

[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1.3"
objc2-app-kit = { version = "0.3", features = ["NSButton", "NSControl", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[dev-dependencies]
tempfile = "3"
